--- a/templates/add_member.html
+++ b/templates/add_member.html
@@ -1,31 +1,41 @@
 {% extends 'base.html' %}
 
-{% load widget_tweaks %}
-
 {% block content %}
-  <h2>Add Member</h2>
-  <form method="post">
-    {% csrf_token %}
 
-    {% for hidden in form.hidden_fields %}
-      {{ hidden }}
-    {% endfor %}
+  <h2>
+    Member
+    <a href="/add_member" class="btn btn-primary pull-right">
+      <span class="glyphicon glyphicon-plus"></span> Add Member
+    </a>
+  </h2>
 
-    {% for field in form.visible_fields %}
-      <div class="form-group">
-        <label for="{{ field.id_for_label }}">{{ field.label }}</label>
-        {% render_field field class="form-control" %}
-        {% for error in field.errors %}
-          <span class="help-block">{{ error }}</span>
-        {% endfor %}
-      </div>
-    {% endfor %}
+  <table class="table">
+    <thead>
+      <tr>
+        <th>ID</th>
+        <th>First name</th>
+        <th>Last name</th>
+        <th>Email</th>
+        <th>Phone</th>
+        <th>Bio</th>
+      </tr>
+    </thead>
+    <tbody>
+      {% for rs in members %}
+        <tr>
+          <td>{{ rs.id }}</td>
+          <td>{{ rs.username }}</td>
+          <td>{{ rs.firstname }}</td>
+          <td>{{ rs.lastname }}</td>
+          <td>{{ rs.email }}</td>
+          <td>{{ rs.bio }}</td>
+        </tr>
+      {% empty %}
+        <tr>
+          <td colspan="6" class="text-center">No result</td>
+        </tr>
+      {% endfor %}
+    </tbody>
+  </table>
 
-    <div class="form-group">
-      <button type="submit" class="btn btn-success">
-        <span class="glyphicon glyphicon-ok"></span> Save
-      </button>
-      <a href="/" class="btn btn-default">Cancel</a>
-    </div>
-  </form>
 {% endblock %}
