--- a/templates/base.html
+++ b/templates/base.html
@@ -1,25 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html>
 <head>
-    {% load static %}
-    <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.css' %}"/>
-    <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1"/>
- <title>{% block title %}Simple Forms{% endblock %}</title>
+    <title>Coding for Entrepreneurs is doing Try Django</title>
 </head>
 <body>
-    <nav class="navbar navbar-default">
-        <div class="container-fluid">
-            <a class="navbar-brand">Cairocoders</a>
-        </div>
-    </nav>
- <div class="container">
-    <div class="col-md-12 well">
-        <h3 class="text-primary">Python Django Simple Forms Using Widget Tweaks</h3>
-        <hr style="border-top:1px dotted #ccc;"/>
-        {% block content %}
- 
-        {% endblock %}
-    </div>
-    </div>
-</body>
+   {% include 'navbar.html' %}
+
+   {% block content %}
+    replace me
+   {% endblock %} 
+
+    </body>
 </html>
